--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <div class="container">
     <h1>Generador de Base de Datos de 5000 Clientes</h1>
     <h2>Campos incluidos</h2>
-    <h3>ID, rut, Nombre, Apellido, Fecha de Nacimiento, Dirección, País, Ciudad, Código Postal, Teléfono, Correo electrónico, Ocupación, Estado Civil, Centro de Costo, Compras anuales</h3>
+    <h3>ID, Rut, Nombre, Apellido, Fecha de Nacimiento, Dirección, País, Ciudad, Código Postal, Teléfono, Correo electrónico, Ocupación, Estado Civil, Centro de Costo, Compras anuales</h3>
     <button id="downloadButton">Generar Base de Datos</button>
   </div>
 
