--- a/index.html
+++ b/index.html
@@ -19,11 +19,8 @@
       <button class="btn btn-primary" id="downloadButton">Descargar Base de Datos</button>
     </div>
   </div>
-
-  <!-- <h2>Campos incluidos</h2>
-  <h3>ID, Rut, Nombre, Apellido, Fecha de Nacimiento, Dirección, País, Ciudad, Código Postal, Teléfono, Correo electrónico, Ocupación, Estado Civil, Centro de Costo, Compras anuales</h3> -->
-
   <script src="/script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
